Début interview A Giorgetti

--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -500,11 +500,165 @@ N'ai pas peur de tout casser sur ta machine: si tu as une branche du code sur gi
 
 \section{Le jeu vidéo et de la création d'entreprise}
 Je suis intéressé par la création de jeu vidéo libre. À cause du modèle économique du libre, il est à priori difficile de vivre de cette activité.
+
+
 \subsection{L'interview de Céline Libéral}
+\begin{description}
+
+\item [Question]: Bonjour !
+\item Je suis un étudiant en informatique et je m'intéresse au développement et aux jeux vidéo. Je viens de découvrir célisoft et ça m'intrigue. Si j'ai bien compris c'est un petit studio de jeux ?
+\item 
+\item [Réponse]: Bonjour, studio est un bien grand mot, en fait je m'occupe du développement et de la com et Zoé s'occupe des graphismes et du son. On a sorti 2 petits jeux surtout pour se faire la main en 2014 et on est en train de commencer un projet plus complexe qui va au moins nous prendre 2 mois.
+\item Le jeu vidéo libre et à prix libre, ce n'est vraiment pas évident mais on essaye de s'y tenir.
+\item Merci d'avoir poser la question en tout cas :-)
+\item 
+\item 
+\item [Question]: Ça m'intéresse pas mal parce que ça je vais peut être me lancer dans la création de jeux vidéo.
+\item Y a t-il un financement extérieur ? Avez-vous besoin de travailler à côter ?
+\item Désolé pour l'excès de curiosité !
+\item 
+\item [Réponse]: Pour le moment il n'y a aucun financement, on va dire qu'on vit sur mes économies réalisées quand je bossais pour des grosses entreprises françaises...
+\item On envisage le financement participatif (IndieGogo) pour les jeux à venir. Mais si les campagnes ne fonctionnent pas, on va devoir se trouver un (petit) job sur le côté.
+\item 
+\item Contrairement à ce qu'on dit la curiosité est loin d'être un vilain défaut ;-).
+\item 
+\item [Question]: Vous avez fais comment pour "formaliser" votre projet ? Je veux dire, célisoft a t-elle un status juridique ? :)
+\item 
+\item [Réponse]: Oui, en fait, actuellement, Zoé n'est pas officiellement salariée, je suis en auto-entreprise. N’hésites pas à en faire une pendant que tu es encore étudiant pour justement compléter tes revenus et voir si ton projet est viable, ça t'éviteras nos galères et surtout de voir la viabilité de ton projet avant d'être réellement sur le "marché" du travail ;-)
+\item 
+\item [Question]: Pour l'instant je suis en L2 d'info et je suis à priori parti pour faire de la recherche.
+\item Mais la création d'un studio de jeux vidéo libre m'interesse énormement. Le problème ça reste l'argent dans l'histoire: comment financer tout ça ? Avec les kickstarters et autres financements participatifs ? Ça me semble risqué quand même  
+\item 
+\item Vous avez crées célisoft quand ?
+\item 
+\item [Réponse]: On s'est orienté vers le jeu vidéo mi-octobre, avant j'ai fait quelques petits devs (celisoft existe a la base depuis juin 2014). Le secteur de Bordeaux est vraiment difficile informatiquement parlant, c'est pour ça qu'il fallait m'orienter vers une activité non locale.
+\item 
+\item [Question]: Vous avez fait comment pour créer célisoft ? J'veux dire par rapport aux démarches ? C'est compliqué ?
+\item 
+\item [Réponse]: La démarche est très simple. \\Il suffit aller sur le site de l'auto-entrepreneur, ça prends 30 minutes et attendre le courrier de l'URSSAF avec ton SIRET et tu peux commencer.
+\item Après il y a une déclaration de revenus à envoyer auprès de l'URSSAF tous les 3 mois et un courrier au SIE tous les ans.
+\item 
+\item [Question]: "ça t'éviteras nos galères et surtout de voir la viabilité de ton projet " --> Vos galères ? C'est d'ordre financier ?
+\item 
+\item [Réponse]: oui  
+\item 
+\item [Question]: Vous savez déjà comment vous allez vous faire connaitre ? (Cad où vous allez trouver votre public )
+\item 
+\item [Réponse]: Les réseaux sociaux surtout Twitter et puis des sites tels que itch.io en fonction des jeux que l'on fait.
+\item 
+\item [Question]: C'est intéressant ! Je ne connaissais pas itch.io. Vous y avez déjà mis vos deux premier jeux ?
+\item 
+\item [Réponse]: Juste SFS\footnote{\textsc{SFS}: (Santa's flappy sled) Le premier jeu de Célisoft.}, le premier est un peu particulier à installer (python / pygame) contrairement à SFS qui est un jeu html5.
+\item 
+\item [Question]: Vous allez rester sur du html5 ?
+\item Je prépare un dossier sur mon orientation (projet professionnel) d'où toutes ces questions: ça va m'aider à me faire une idée sur mes possibilités et mes envies  .
+\item D'ailleurs je peux reprendre ce que nous disons dans mon dossier ? (Ça implique écrire un petit paragraphe sur célisoft)
+\item 
+\item [Réponse]: Pour le HTML5, ça nous permet d'être plus facilement "partout" -> PC / Mac / Console / Smartphone. Après il y aura certainement encore des jeux PC / Mac only qui seront fait en Python (et diffusés via gog.com).
+\item Tu peux réutiliser nos échanges bien sûr ;-)
+\item 
+\item [Question]: Donc là vous êtes sur un nouveau projet à "plein temps" ?
+\item 
+\item [Réponse]: Yep ! Un jeu d'infiltration / espionnage en 2D avec HTML5. Mais là on est surtout sur Blender pour les graphismes de base en ce moment.
+\item 
+\item [Question]: Pourquoi avoir créer une entreprise ? Quels avantages ça vous donne ?
+\item 
+\item [Réponse]: Le droit de gagner de l'argent légalement  "
+\item 
+\item [Question]: "Le jeu vidéo libre et à prix libre" --> qu'est ce que tu entends par "prix libre" ?  
+\item 
+\item [Réponse]: Les gens payent le prix qu'ils veulent soit dans une liste de prix à choisir pour le même jeux ou alors un prix à saisir manuellement. J'ai découvert ce principe sur le site\footnote{https://vimebook.com/} de Vim pour les humains.
+\item 
+\item [Question]: C'est intéressant ça ! Ça marche bien ? Je veux dire, là je viens de le payer pour un prix de 0€ pour voir si ça marchait: et ça marche. Donc les gens mettent de l'argent ?
+\item 
+\item [Réponse]: Pour les jeux à venir ce sera plus une liste déroulante de prix car justement le prix 100\% libre, ça ne marche pas en ce qui nous concerne :-/
+\item 
+\item [Question]: C'est un principe intéressant.
+\item Comment faites vous pour travailler à deux ? Vous utilisez des outils comme git/svn ?
+\item 
+\item [Réponse]: git (bitbucket / github) et ftp  . Comme on vit ensemble bah après on n'a pas trop de soucis pour communiquer ni besoin d'outils particuliers :D
+\item 
+\item [Question]: Si ça ne fonctionne pas vous savez ce que vous allez faire ?
+\item Et si ça fonctionne bien ? :)
+\item 
+\item [Réponse]: Si ça ne fonctionne pas, il y a toujours moyen de trouver quelque chose pour un peu d'argent en informatique comme dans d'autres domaines, on n'a pas de gros besoins financiers non plus. Me concernant des projets open source pourraient avoir besoin de fonctionnalités contre rémunération, il y a des sites qui recensent ces besoins.
+\item Et si ça marche, on continuera et on s'orientera en plus sur la formation (livre / sites ....)
+\item 
+\item [Question]: Pour les sites dont tu parles tu aurais des liens ? Ça m'intéresse pas mal !
+\item 
+\item [Réponse]: Le plus connu est BountySource\footnote{https://www.bountysource.com/}, il y a aussi FossFactory\footnote{http://www.fossfactory.org/} et probablement d'autres (ne pas hésiter à traîner sur les github des projets comme Diaspora également).
+\item 
+\item [Question]: Merci bien :)
+\item Je vais arrêter d'embêter avec mes questions  
+\item C'est intéressant d'avoir le point de vue de quelqu'un qui se lance dans le jeu vidéo indépendant.
+\item Je t'enverrai une copie de mon dossier si tu veux.
+\item Bonne chance à vous !
+\item 
+\item [Réponse]: Ok, merci :)
+
+\end{description}
 \subsection{Ma conclusion}
 
-\section{L'enseignement et de la recherche}
-\subsection{L'interview d'Alain Giorgetti}
+\section{L'enseignement et la recherche}
+\subsection{Rencontre avec Alain Giorgetti}
+
+\paragraph{}
+Lundi 5 janvier 2015 j'ai rencontré Alain Giorgetti. J'avais sollicité un rendez-vous avec lui afin qu'il puisse me parler de son métier d'enseignant-chercheur, et tout particulièrement de la recherche. Nous avons parlé environs une heure et demie dans son bureau à l'Université de Franche-Comté.
+\paragraph{}
+Du fait de la nature de l'entretien et n'ayant pas utilisé de dispositif d'enregistrement audio, je ne dispose pas d'une interview complète. J'ai effectué une prise de note, ce qui me permet désormais de faire un rapport récapitulatif de ce que j'ai appris à l'issu de cet entretien.
+
+\paragraph{Première impression sur l'environnement de travail}
+J'entre dans la petite salle qui fait office de bureau à Alain Giorgetti. Une table, une armoire, un grand bureau, trois ordinateurs et un tableau velleda. L'environnement de travail me plaît: il est simple mais il y a tout ce qu'il faut pour travailler. Un bureau, un ordinateur et un tableau. Celui-ci est d'ailleurs rempli de schémas que je ne comprends pas. Sur toutes les surfaces sont posées des piles de feuilles et des copies doubles.
+
+\subsubsection{Ce qu'un chercheur fait} La première question que je pose à A. Giorgetti concerne les tâches quotidiennes d'un chercheur. Il m'explique alors qu'un chercheur ne passe pas sa journée avec une feuille blanche et un stylo à la recherche d'idées. Il estime d'ailleurs qu'il ne passe pas plus de 5\% de son temps à le faire.
+
+\paragraph{L'hyperspécialisation}
+Du fait de la concurrence entre chercheurs, il est important pour un chercheur d'être spécialisé dans un domaine. Alain Giorgetti parle même d'hyperspécialité lorsqu'il évoque ce phénomène. En effet, en étant spécialisé de la sorte, un chercheur devient une référence dans son domaine au niveau régional (voir nationnal).
+
+\paragraph{La culture}
+Parallèlement à la spécialisation, le chercheur doit également avoir assez de culture scientifique pour pouvoir s'adapter. 
+\\C'est pourquoi il participe à des conférences (souvent en anglais). Alain Giorgetti précise également que ces conférences sont des occasions de rencontrer d'autres chercheurs, et que ces rencontres aboutissent parfois à des associations de projet et/ou à des collaborations entre chercheurs.
+De plus, afin d'élargir sa culture, une des activités du chercheur est la lecture de publication. Il doit en effet se tenir au courant de ce qu'il se fait dans son domaine, et également dans les autres. Il y a ainsi tout un travail de veille sur les publications scientifiques des autres chercheurs.
+
+
+\paragraph{Les financements}
+En premier lieu, le chercheur doit trouver un financement pour ses projets. Pour se faire, il doit déjà écrire un dossier de candidature complet décrivant le projet. Dans ce dossier il explique et détail certains points:
+\begin{itemize}
+\item une description du projet
+\item le planning du projet
+\item la nouveauté du projet
+\item ce qui a déjà été fait dans le domaine
+\end{itemize}
+De plus, il doit également trouver un financement pour les thèses des doctorants qu'il encadre.
+La recherche de financement apparait alors comme une part importante du travail de chercheur.
+
+
+\paragraph{L'équipe}
+Le chercheur fait d'abord partie d'une équipe. Ainsi, Alain Giorgetti lui fait partie de l'équipe de recherche VESONTIO. L'équipe est importante pour le chercheur: les idées et les projets sont des travaux collectifs. Ainsi, le chercheur doit participer à des réunions d'équipe afn de savoir qui fait quoi, et comment s'organiser dans les projets.
+
+\paragraph{Les idées}
+Alain Giorgetti m'explique alors que dans la recherche, il n'y pas beaucoup d'espace pour développer ses idées. En effet, le chercheur passe beaucoup de temps à développer \textit{une} idée au détriment des autres.
+De plus, il est difficile de trouver des idées qui soit à la fois ambitieuse (maise pas trop) et réalisable. La plupart du temps, les idées s'avèrent trop ou pas assez ambitieuse ou alors tout simplement mauvaise. Au final, un projet arrive àson terme généralement grâce à une association de bonnes idées, et non grâce à une seul et même idée géniale (ça arrive, mais c'est relativement rare).
+On voit alors l'importance du travail d'équipe dans la recherche.
+
+\paragraph{}
+Alain Giorgetti conclu en décrivant la recherche comme un métier passionant à temps plein où il est nécessaire d'être méthodique et motivé. En effet, il est possible de passer de l'euphorie au découragement lorsqu'un projet n'aboutit pas ou lorsqu'une idée se révèle être mauvaise.
+
+
+\subsubsection{L'environnement de travail d'un chercheur}
+\paragraph{Les outils}
+Les chercheurs du département DISC\footnote{\textsc{DISC}: Département Informatique des Systèmes Complexes} dispose du mésocentre auquel ils peuvent accéder à distance depuis leurs bureaux.
+
+\subparagraph{Le système d'exploitation}
+Les chercheurs utilisent pour la plupart GNU/Linux. Cela s'explique pour des raisons de simplicités. De plus beaucoup de laboratoires distribuent leurs outils unqieuemnt sous ce système. Ces contraintes misent de côté, les chercheurs sont libre de choisir leur système d'exploitation.
+
+\subparagraph{le developpement}
+Alain Giorgetti dit utiliser le langage Java. Cependant il n'y est pas contraint. En effet, l'utilisation d'un langage plutôt qu'un autre est déterminé par la spécialité de l'équipe et par l'influence donnée par l'enseignement dans l'établissement. Il utilise également un peu le Python ainsi que le C et le Caml.
+Pour le développement, il choisit avant tout un paradigme, celui-ci permettant de déterminer quel langage choisir.
+
+\subparagraph{Proof of concept}
+Afin d'illustrer leur projet et de montrer les résultats, les chercheurs doivent parfois développer un logiciel implémentant leurs travaux. Ce logiciel est un prototype appelé ``proof of concept''. Ces logiciels sont souvent pas (ou peu) maintenu car maintenir un logiciel n'est ni nouveau, ni innovant et n'est donc pas un projet de recherche. Ces logiciels sont généralement développé sous la licence que les outils de développements imposent.
+
 
 \subsection{Ma conclusion}
 
