Ajout des annexes

--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -5,6 +5,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[tight]{shorttoc}
 \usepackage{color}
+\usepackage[final]{pdfpages}
 
 \author{Bérenger Ossete Gombe}
 \title{Dossier PPP}
@@ -39,6 +40,14 @@
 \part{Introduction}
 
 \chapter{Remerciements}
+\paragraph{}
+Je tiens à remercier mes enseignants et en particulier Fabien \textsc{Peureux} et Hélène \textsc{Gouillardon}. Les cours d'Atelier Projet Professionnel et de Projet Personnel et Professionel m'ont grandement aidé à la rédaction de ce dossier jusque dans sa structure \textsc{bilan-projet-marché-action}.
+
+\paragraph{}
+Merci également à mon ami Ervan \textsc{Silvert} pour m'avoir fait découvrir \LaTeX\ et pour avoir mit à ma disposition son dossier PPP afin de m'aider avec ce nouvel outil.
+
+\paragraph{}
+Merci enfin aux volontaires ayant donnée leur temps pour un interview improvisé: Alain \textsc{Giorgetti}, Céline \textsc{Libéral}, \textsc{Chriswot} et \textsc{Yakulu}.
 
 \chapter{Guide de lecture}
 
@@ -52,7 +61,7 @@ Celles-ci seront traitées selon leurs natures.
 
 
 \section{Introspection}
-Dans cette partie nous allons nous intéresser aux compétences liées au \textbf{savoir-être} et à la \textbf{personnalité}. Celle-ci est consituée de traits que l'on peut considérer comme des qualités ou bien comme des défauts. Il est alors difficile de rester objectif tant cela est une affaire de \textbf{point de vue}. Je me vois d'une certaine manière, les autres me voient différement, et je me vois à travers le regard des autres encore différement. Cette divergence des points de vues rend mon travail d'analyse tout à fait \textbf{subjectif}. Je traiterai ici uniquement ma vision que je m'efforcerai de pondéré en m'aidant d'un exercice d'autoportrait\footnote{réference nécessaire} effectué dans le cadre du CMI\footnote{Cursus Master en Ingénierie}.
+Dans cette partie nous allons nous intéresser aux compétences liées au \textbf{savoir-être} et à la \textbf{personnalité}. Celle-ci est consituée de traits que l'on peut considérer comme des qualités ou bien comme des défauts. Il est alors difficile de rester objectif tant cela est une affaire de \textbf{point de vue}. Je me vois d'une certaine manière, les autres me voient différement, et je me vois à travers le regard des autres encore différement. Cette divergence des points de vues rend mon travail d'analyse tout à fait \textbf{subjectif}. Je traiterai ici uniquement ma vision que je m'efforcerai de pondéré en m'aidant d'un exercice d'autoportrait\footnote{Voir en Annexe \ref{autoportrait} en page \pageref{autoportrait}} effectué dans le cadre du CMI\footnote{Cursus Master en Ingénierie}.
 
 \newpage
 \subsection{Comportement}
@@ -261,20 +270,20 @@ Il s'agit ici de définir ce que je \textsc{\textbf{veux}} faire sans s'occuper 
 
 \footnotetext[1]{Société de Service en Ingénierie Informatique (également SS2I) }
 \footnotetext[2]{Société de Service en Logiciel Libre (également SS2L) }
-\footnotetext[3]{Les studios de developpement libre sont très rare (TODO)}
+\footnotetext[3]{Les studios de développement libre sont très rare (TODO)}
 
 \begin{description}
 \item [Enseignement] C'est ce qu'il y a de mieux pour partager sa passion pour l'informatique. Malheureusement je trouve ça trop peu technique: on passe \textbf{tout} son temps à enseigner et donc on a pas le temps d'approfondir véritablement.
 
-\item [Recherche] Semble correspondre parfaitement avec mes motivations et valeurs.
+\item [Recherche] Semble correspondre parfaitement avec mes motivations et\\ valeurs.
 
 \item [Les SSII] Intéressant car on change souvent de client ce qui permet de varier son travail. Cependant travailler pour un SS2I me forcerait potentiellement à devoir travailler avec des outils non-libre et pour des sociétés qui pourraient ne pas être en phase avec mes valeurs.
 
 \item [Les SSLL] Même intêret que pour les SS2I, les éventuels conflits de valeurs en moins. Ces sociétés sont relativements rare\footnote{Annuaire des SSLL: http://www.linux-france.org/article/pro/annuaire/}, ce qui m'obligerait à me déplacer.
  
-\item [Création d'activité] Ça me semble très intéressant mais également très risqu'é. Cependant je pense qu'il y a des choses à faire coté logiciel libre.
+\item [Création d'activité] Ça me semble très intéressant mais également très risqué. Cependant je pense qu'il y a des choses à faire du coté logiciel libre.
 
-\item [Developpement] Intuitivement je dirais que ça m'intéresse beaucoup. \\J'aime le travail d'équipe et j'aime programmer. Cependant ça risque de ne pas me convenir pour le coté routinier du métier. Je pense également ne pas apprécier de \textit{faire} sans \textit{concevoir}.
+\item [Développement] Intuitivement je dirais que ça m'intéresse beaucoup. \\J'aime le travail d'équipe et j'aime programmer. Cependant ça risque de ne pas me convenir pour le coté routinier du métier. Je pense également ne pas apprécier de \textit{faire} sans \textit{concevoir}.
 \end{description}
 
 
@@ -390,13 +399,13 @@ Deux \textbf{volontaires} sont alors intervenus: Chriswot, un contributeur de Li
 \item [Réponse]:  Je suis membre de Frama. On sort tout juste de l'Assemblée Générale 2014 :)
 \item [Question]:  En tant que membre tu contribues aux divers projets ? (Je ne connais pas très bien la structure de framasoft.)
 \item [Réponse]:  Je contribue essentiellement aux échanges internes, à la technique, je devrais être amené à travailler autour de framapad & framacalc.
-\item [Question]:  Par technique tu entends developpement ?
+\item [Question]:  Par technique tu entends développement ?
 \item [Réponse]:  Non, infrastructure technique, serveur etc. Framasoft ne fait pas ou peu de développement mais on a des participants ou membres qui en font à titre personnel.
 \item [Question]:  Si j'ai bien compris Framasoft offres surtout des services libres (framadate farmacalc etc).
 \item [Réponse]:  Historiquement Framasoft offrait surtout un annuaire de logiciels libres, puis s'est diversifié autour de tas de projets menés par des bonnes volontés. Aujourd'hui il est surtout visible par ses services en ligne. Quand tu vas sur la page d'accueil\footnote{http://framasoft.org/}, tu retrouves tous les projets actifs par catégorie.
 \item [Question]:  Mais les membres actifs dans le développement sont tous bénévoles ? J'ai cru voir qu'il y avait quelques permanents.
 \item [Réponse]:  Il y a deux permanents. Ils gèrent surtout les projets, les coordonnent, font l'administratif et parlent de l'association envers le public (conférences, presse etc). Ils font un peu de technique aussi, essentiellement de l'adminisatrion système, mais les projets reposent quasi tous sur le bénévolat.
-\item [Question]:  Donc moi qui cherche un emploi du coté du developpement libre j'ai plutot interet à regarder vers les entreprises qui utilisent le libre ?
+\item [Question]:  Donc moi qui cherche un emploi du coté du développement libre j'ai plutot interet à regarder vers les entreprises qui utilisent le libre ?
 \item [Réponse]:  Oui, \importantPoint{aucune association n'emploie de développeur à ma connaissance}, il faut aller du côté des sociétés spécialisées existantes, ou monter ta société.
 \item [Question]:  Tu crois que tu pourrais me parler de ces entreprises ?
 \item [Réponse]:  Il y en des centaines, difficile d'en faire des généralités. Il y a une catégorisation qui est faite dans les docs que je viens de te citer. Le mieux pour avoir des infos reste de contacter ces fédérations d'entreprises du libre, comme la cnll. Tu es dans quel coin de la france ?
@@ -464,48 +473,7 @@ N'ai pas peur de tout casser sur ta machine: si tu as une branche du code sur gi
 
 
 
-\subsection{L'interview de Chriswot (original)}
-\begin{description}
-\item [Question]:  Hi ! Thank you !
-\item [Réponse]:  What did you want to know ?
-\item [Question]:  First i am a computer science student and I looking for information about free software dev. I want to work in that domain but I don't know what type of job exists with the free software philosophy.
-\item [Réponse]:  It depends - to get paid to do free software you really need to find a place that is getting paid for support.
-\item [Question]:  My first question would be: Who are you ? A libreoffice developer's ? (Can you introduce yourself ?)
-\item [Réponse]:  I'm a LibreOffice developer who's about to take up a paid contract with Collabora. I've been working on LO for about a year now, on and off. Doing a lot of reading and refactoring. Getting to know folks on IRC gradually
-\item [Question]:  For you which domain of computer science are the more concerned by the free software dev ?
-\item [Réponse]:  Coding and testing. That's a big question ! Do you mean, what aspect of software am I interested in? Like application software, frameworks, operating systems, etc ?
-\item [Réponse]:  Well, for now I am interested in application software, but that's a large area. I'm currently focusing on the widget layer of LO, called VCL
-\item [Question]:  Can you explain me how did you step in the free software dev ?
-\item [Réponse]:  I started by reading the code after seeing a post about LO on Hacker News
-\item [Question]:  And what advices you would give to a student who wants to work in free software dev ?
-\item [Réponse]:  For me, I looked for the entry point of LO (the main function). Then I traced through the code and eventually started making some small changes after working out how to setup the build tools. Sure, a big enough free software project takes time to understand. The very first thing is to work out how to get the source code, and work out how to build it. Then I'd read all the documentation you can find, and be prepared to do a LOT of code reading. Work out if there are any easy changes you can make, like typos in comments, silly mistakes that can be fixed. Make those changes then work out how to get those changes integrated into the core product. Some projects like LO make it easy (e.g. we use gerrit), other projects it's quite hard. Be prepared to write a document about what you find, even if you use it only for yourself. Lurk on IRC for a while and try to gradually ask questions and show you are working on issues, but if you ask a question on IRC on a dev channel, always explain that you have read the documentation and that it wasn't clear, could someone clarify otherwise you might be mildly flamed :-) . But above all, be prepared to take on feedback, and be prepared to go outside your comfort zone and learn how to use git properly :-)
-\item [Question]:  what do you mind when you say " go outside your comfort zone" ?
-\item [Réponse]:  Try stuff on your local machine - be willing to make mistakes. Look at areas you don't understand - sometimes you'll need to read up on odd things. For instance, I'm currently reading all the EMF specs from Microsoft so that I can get drawing in documents working. Don't be afraid to break stuff on your local workstation - if you branch code in git, it's very hard to go wrong as you can checkout the master branch and start a new branch.
-\item [Question]:  Is LO development your main job ?
-\item [Réponse]:  It will be shortly :-) but before this I've worked in a variety of jobs.
-\item [Question]:  A variety of jobs in computer science 's field ?
-\item [Réponse]:  More IT than computer science.
-\item [Question]:  Did you work with free softwares ?
-\item [Réponse]:  I was a support person, a senior software troubleshooter for a VMWare product, stuff like that. I did a few things. Not much really, but I helped troubleshoot some nasty bugs in Firefox. However, I've been involved in free culture projects, like Wikipedia. At one time at a reasonably influential level.
-\item [Question]:  So now you need to have another job ? I  only want to work with free software. So the main issues is: what kind of jobs can I choose to get paid and to develop free software ?
-\item [Réponse]:  Do you want to develop free software? Not many projects are monetized, but you can get roles being a sysadmin and contribute to free software.
-\item [Question]:  Yes I would like to. I don't really know what is a sysadmin, can you explain me what does a sysadmin do ?
-\item [Réponse]:  Looks after computer systems :-) server admin work normally. Basically, you need to find an itch and scratch it.
-\item [Réponse]:  My interest was LO. There is no silver bullet, I'm getting paid because there is demand for my skills and I did a lot of dedicated work and proved my skills to the other developers over a long period of time.
-\item [Question]:  So you work from home ?
-\item [Réponse]:  Yep, I live in Australia and most of the rest of the devs in the company I work for are in Europe or in the UK.
-\item [Question]:  Will you earn money when you will be working exclusively for LO ?
-\item [Réponse]:  I might do some side jobs, the job only lasts for 2 months so far.
-\item [Question]:  So you will always need to have side jobs ? In your sides jobs do you use free software ?
-\item [Réponse]:  To be honest, this is my first paid gig as a free software developer, but I suspect that this will be the case. Then again, I have a lot of freedom in this role that I can't get at a normal workplace.
-\item [Réponse]:  I can take my kids to school in the morning, do chores, no micro-managing, that sort of thing.
-\item [Question]:  Do you have to change your side jobs frequently ?
-\item [Réponse]:  Actually, I took on this role when I was made redundant. I got a good payout. Anyhow... I gotta get some coding done - hope I was helpful :-)
-\item [Question]:  You were helpful :) thank you very much ! (And sorry for my bad english)
-\item [Réponse]:  no probs :-) best of luck
-\item [Réponse]:  not at all, you were fine :-)
 
-\end{description}
 
 \subsection{Bilan}
 \paragraph{Ce que j'ai appris}
@@ -746,6 +714,56 @@ Ce dossier m'a permit de mieux appréhender l'établissement de mon projet profe
 %\newpage
 \tableofcontents{}
 %\newpage
+
+
+\appendix
+\chapter{Exercice d'autoportrait}\label{autoportrait}
+\includepdf[pages = 1]{autoportraitCMI.pdf}
+
+\chapter{Interview de Chriswot en anglais}
+
+\begin{description}
+\item [Question]:  Hi ! Thank you !
+\item [Réponse]:  What did you want to know ?
+\item [Question]:  First i am a computer science student and I looking for information about free software dev. I want to work in that domain but I don't know what type of job exists with the free software philosophy.
+\item [Réponse]:  It depends - to get paid to do free software you really need to find a place that is getting paid for support.
+\item [Question]:  My first question would be: Who are you ? A libreoffice developer's ? (Can you introduce yourself ?)
+\item [Réponse]:  I'm a LibreOffice developer who's about to take up a paid \\contract with Collabora. I've been working on LO for about a year now, on and off. Doing a lot of reading and refactoring. Getting to know folks on IRC gradually
+\item [Question]:  For you which domain of computer science are the more concerned by the free software dev ?
+\item [Réponse]:  Coding and testing. That's a big question ! Do you mean, what aspect of software am I interested in? Like application software, frameworks, operating systems, etc ?
+\item [Réponse]:  Well, for now I am interested in application software, but that's a large area. I'm currently focusing on the widget layer of LO, called VCL
+\item [Question]:  Can you explain me how did you step in the free software dev ?
+\item [Réponse]:  I started by reading the code after seeing a post about LO on Hacker News
+\item [Question]:  And what advices you would give to a student who wants to work in free software dev ?
+\item [Réponse]:  For me, I looked for the entry point of LO (the main function). Then I traced through the code and eventually started making some small changes after working out how to setup the build tools. Sure, a big enough free software project takes time to understand. The very first thing is to work out how to get the source code, and work out how to build it. Then I'd read all the documentation you can find, and be prepared to do a LOT of code reading. Work out if there are any easy changes you can make, like typos in comments, silly mistakes that can be fixed. Make those changes then work out how to get those changes integrated into the core product. Some projects like LO make it easy (e.g. we use gerrit), other projects it's quite hard. Be prepared to write a document about what you find, even if you use it only for yourself. Lurk on IRC for a while and try to gradually ask questions and show you are working on issues, but if you ask a question on IRC on a dev channel, always explain that you have read the documentation and that it wasn't clear, could someone clarify otherwise you might be mildly flamed :-) . But above all, be prepared to take on feedback, and be prepared to go outside your comfort zone and learn how to use git properly :-)
+\item [Question]:  what do you mind when you say " go outside your comfort zone" ?
+\item [Réponse]:  Try stuff on your local machine - be willing to make mistakes. Look at areas you don't understand - sometimes you'll need to read up on odd things. For instance, I'm currently reading all the EMF specs from Microsoft so that I can get drawing in documents working. Don't be afraid to break stuff on your local workstation - if you branch code in git, it's very hard to go wrong as you can checkout the master branch and start a new branch.
+\item [Question]:  Is LO development your main job ?
+\item [Réponse]:  It will be shortly :-) but before this I've worked in a variety of jobs.
+\item [Question]:  A variety of jobs in computer science 's field ?
+\item [Réponse]:  More IT than computer science.
+\item [Question]:  Did you work with free softwares ?
+\item [Réponse]:  I was a support person, a senior software troubleshooter for a VMWare product, stuff like that. I did a few things. Not much really, but I helped troubleshoot some nasty bugs in Firefox. However, I've been involved in free culture projects, like Wikipedia. At one time at a reasonably influential level.
+\item [Question]:  So now you need to have another job ? I  only want to work with free software. So the main issues is: what kind of jobs can I choose to get paid and to develop free software ?
+\item [Réponse]:  Do you want to develop free software? Not many projects are monetized, but you can get roles being a sysadmin and contribute to free software.
+\item [Question]:  Yes I would like to. I don't really know what is a sysadmin, can you explain me what does a sysadmin do ?
+\item [Réponse]:  Looks after computer systems :-) server admin work normally. Basically, you need to find an itch and scratch it.
+\item [Réponse]:  My interest was LO. There is no silver bullet, I'm getting paid because there is demand for my skills and I did a lot of dedicated work and proved my skills to the other developers over a long period of time.
+\item [Question]:  So you work from home ?
+\item [Réponse]:  Yep, I live in Australia and most of the rest of the devs in the company I work for are in Europe or in the UK.
+\item [Question]:  Will you earn money when you will be working exclusively for LO ?
+\item [Réponse]:  I might do some side jobs, the job only lasts for 2 months so far.
+\item [Question]:  So you will always need to have side jobs ? In your sides jobs do you use free software ?
+\item [Réponse]:  To be honest, this is my first paid gig as a free software developer, but I suspect that this will be the case. Then again, I have a lot of freedom in this role that I can't get at a normal workplace.
+\item [Réponse]:  I can take my kids to school in the morning, do chores, no micro-managing, that sort of thing.
+\item [Question]:  Do you have to change your side jobs frequently ?
+\item [Réponse]:  Actually, I took on this role when I was made redundant. I got a good payout. Anyhow... I gotta get some coding done - hope I was helpful :-)
+\item [Question]:  You were helpful :) thank you very much ! (And sorry for my bad english)
+\item [Réponse]:  no probs :-) best of luck
+\item [Réponse]:  not at all, you were fine :-)
+
+\end{description}
+
 
 \end{document} 
  
